services/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw-ingress
  namespace: excalidraw
spec:
  ingressClassName: traefik
  rules:
    - host: excalidraw.vandelay
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: excalidraw-service
                port:
                  number: 5000
